<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_block_by_admin_msg">Dear user, Your account has been locked. Please contact our support</string>
    <string name="action_cancel">Cancel</string>
    <string name="activity">Activity</string>
    <string name="adoption">Adoption</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Android Bookmark Sales Upgrade</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approved">Approved</string>
    <string name="bad_request">Bad Request</string>
    <string name="books_samples_given_to_the_customer">Books samples given to the customer.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_helpline">Call Helpline</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact">Contact</string>
    <string name="dest_title">destination title</string>
    <string name="details">Details</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="do_you_want_to_delete_this_item">Do you want to Delete this item</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_unauthorized">Your session has timed out. Please login again.</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_alerts_when_your_inventory_is_running_low_so_you_can_re_fill_in_time">Get alerts when your inventory is running low so you can re-fill in time.</string>
    <string name="get_real_time_updates_directly_on_your_phone_without_opening_the_app">Get real-time updates directly on your phone without opening the app.</string>
    <string name="good_morning">good morning.</string>
    <string name="having_trouble_using_the_app_or_facing_issues_with_orders_we_re_here_to_help">Having trouble using the app or facing issues with orders? We’re here to help.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_amp_support">Help &amp; Support</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history">History</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_picker_provider_authority_suffix">.imagepicker.provider</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="inventory_alerts">Inventory Alerts</string>
    <string name="item_view_role_description">Tab</string>
    <string name="know_instantly_when_your_re_fill_request_is_approved_or_declined">Know instantly when your re-fill request is approved or declined.</string>
    <string name="left">LEFT</string>
    <string name="loading">Loading</string>
    <string name="low_stock_reminders">Low Stock Reminders</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_loading_indicator_content_description">Loading</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="maps_api">AIzaSyCu9FtXODUtGU8j4sLeh7Fdjsr0M4GyLcE</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="my_requests">My Requests</string>
    <string name="new_product_added">New Product Added</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="pending">Pending</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="quick_help_faqs">Quick Help (FAQs)</string>
    <string name="receive_important_updates_even_when_you_re_offline_or_have_no_internet_access">Receive important updates even when you’re offline or have no internet access.</string>
    <string name="received">Received</string>
    <string name="sms_alerts">SMS Alerts</string>
    <string name="stay_informed_when_head_office_adds_new_titles_to_your_catalog">Stay informed when head office adds new titles to your catalog.</string>
    <string name="stock_re_fill_updates">Stock Re-Fill Updates</string>
    <string name="we_re_here_to_assist_you">We’re here to assist you</string>
</resources>