<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="#fafafa"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/arrow_back"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/settingTxt"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/notifications"
        android:singleLine="true"
        android:fontFamily="@font/outfit_medium"
        android:paddingEnd="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backIcon"
        app:layout_constraintTop_toTopOf="@+id/backIcon"/>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:textSize="14sp"
                android:textColor="#777"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Delivery Channels"
                android:fontFamily="@font/outfit_medium"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/push_notifications"
                        android:fontFamily="@font/outfit_medium"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="#777"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_real_time_updates_directly_on_your_phone_without_opening_the_app"
                        android:fontFamily="@font/outfit"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sms_alerts"
                        android:fontFamily="@font/outfit_medium"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="#777"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receive_important_updates_even_when_you_re_offline_or_have_no_internet_access"
                        android:fontFamily="@font/outfit"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
            <TextView
                android:textSize="14sp"
                android:textColor="#777"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/inventory_alerts"
                android:fontFamily="@font/outfit_medium"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_stock_reminders"
                        android:fontFamily="@font/outfit_medium"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="#777"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_alerts_when_your_inventory_is_running_low_so_you_can_re_fill_in_time"
                        android:fontFamily="@font/outfit"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_low_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_product_added"
                        android:fontFamily="@font/outfit_medium"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="#777"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stay_informed_when_head_office_adds_new_titles_to_your_catalog"
                        android:fontFamily="@font/outfit"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_new_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="24dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stock_re_fill_updates"
                        android:fontFamily="@font/outfit_medium"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="#777"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/know_instantly_when_your_re_fill_request_is_approved_or_declined"
                        android:fontFamily="@font/outfit"/>
                </LinearLayout>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_stock_refill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
