<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:tag="layout/activity_refill_requests_0"
    android:paddingTop="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/no"
                bind:srcCompat="@drawable/arrow_back"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Refill Stock"
                android:lines="1"
                android:singleLine="true"
                android:layout_weight="1"
                android:fontFamily="@font/outfit_medium"
                android:layout_marginStart="@dimen/_5sdp"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        bind:tabBackground="@color/gray_white"
        bind:tabGravity="fill"
        bind:tabIndicatorColor="@color/app_color"
        bind:tabIndicatorFullWidth="true"
        bind:tabIndicatorHeight="@dimen/_2sdp"
        bind:tabMode="fixed"
        bind:tabRippleColor="@color/app_color"
        bind:tabSelectedTextColor="@color/black"
        bind:tabTextAppearance="@style/CustomTabText"
        bind:tabTextColor="@color/black">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/detailsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/samplesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/historyTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approved"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:background="@color/gray_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp"/>
</LinearLayout>
