<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        android:id="@+id/settingTxt"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/help_amp_support"
        android:singleLine="true"
        android:fontFamily="@font/outfit_medium"
        android:paddingStart="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/backIcon"
        app:layout_constraintTop_toTopOf="@+id/backIcon"
        app:layout_constraintVertical_bias="0.02"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="@+id/backIcon"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/whatsAppScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp">
            <TextView
                android:textSize="22sp"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/we_re_here_to_assist_you"
                android:singleLine="true"
                android:fontFamily="@font/outfit_medium"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black_light"
                android:gravity="start|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/having_trouble_using_the_app_or_facing_issues_with_orders_we_re_here_to_help"
                android:fontFamily="@font/outfit"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/quickScreen"
            android:background="@drawable/quick_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:weightSum="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp">
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/quick_help_faqs"
                android:singleLine="true"
                android:layout_weight="0.85"
                android:fontFamily="@font/outfit_medium"
                android:paddingStart="15dp"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="17dp"
                android:src="@drawable/move_icon"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/requestScreen"
            android:background="@drawable/quick_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:weightSum="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp">
            <TextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="start|center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_requests"
                android:singleLine="true"
                android:layout_weight="0.85"
                android:fontFamily="@font/outfit_medium"
                android:paddingStart="15dp"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="17dp"
                android:src="@drawable/move_icon"
                android:layout_weight="0.1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
